syntax = "proto3";

package service;
import "auth_common.proto";
option go_package = ".;protosService";

service appAuth {
  // 小程序登录
  rpc MiniProgramLogin(MiniProgramLoginRequest) returns(AppLoginResponse){}
  // 手机验证码登录
  rpc PhoneCodeLogin(PhoneCodeLoginRequest) returns(AppLoginResponse){}
  // 邮箱验证码登录
  rpc EmailCodeLogin(EmailCodeLoginRequest) returns(AppLoginResponse){}
  // 密码登录 (手机密码.用户名密码.邮箱密码)
  rpc PasswordLogin(PasswordLoginRequest) returns(AppLoginResponse){}
  //退出
  rpc Logout(LogoutRequest) returns(LogoutResponse){}
  // 验证token是否有效
  rpc VerifyToken(VerifyTokenRequest) returns(APPVerifyTokenResponse){}
  // 刷新token
  rpc RefreshToken(RefreshTokenRequest) returns(AppRefreshTokenResponse){}
  // 微信登录
  rpc WechatLogin(AppThirdRequest) returns(AppLoginResponse){}
  // Apple登录
  rpc AppleidLogin(AppThirdRequest) returns(AppLoginResponse){}
  // 获取token
  rpc GetToken(GetTokenRequest) returns(AppLoginResponse){}
  // 根据account获取token
  rpc GetTokenByAccount(GetTokenByAccountRequest) returns(AppLoginResponse){}

}



